--- a/public/styles/scss/modules/_page.scss
+++ b/public/styles/scss/modules/_page.scss
@@ -33,7 +33,7 @@
 
     z-index: 2;
 
-    @media screen and (max-width: $tablet_size) {
+    @media screen and (max-width: $desktop_size) {
         padding: 0;
     }
 }
