--- a/public/styles/main-css.css
+++ b/public/styles/main-css.css
@@ -81,7 +81,7 @@ table {
 body {
   min-width: 280px;
   min-height: 100%;
-  background-color: #111111;
+  background-color: #303030;
   font-size: 62.5%;
   line-height: 1.4;
   color: #fff;
@@ -108,6 +108,9 @@ body {
 
 a {
   display: inline-block;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
   text-decoration: none; }
 
 button {
@@ -199,21 +202,7 @@ svg.icon {
     Form
     ================== */
 form {
-  padding: 25px;
-  background-color: #121212; }
-
-.form-inner {
-  position: relative;
-  margin: 25px 0 10px 8px; }
-  .form-inner::before {
-    position: absolute;
-    top: 0;
-    left: -10px;
-    content: '';
-    display: block;
-    width: 2px;
-    height: 100%;
-    background-color: #fff; }
+  background-color: #202123; }
 
 input {
   display: block;
@@ -309,7 +298,7 @@ p, .text {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #fff; }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 600px) {
   h1 {
     font-size: 2.9rem; }
 
@@ -743,123 +732,7 @@ p, .paragraph {
           font-family: "News Cycle", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
           color: #f0f0f0; }
 
-/* Modules */
-/*  ==================
-    Authentication
-    ================== */
-.auth-header {
-  display: -webkit-flex;
-  -webkit-justify-content: space-between;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-.auth-title {
-  margin-bottom: 8px; }
-.auth-form {
-  width: 600px;
-  -moz-box-shadow: 0 0 22px -6px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0 0 22px -6px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0 22px -6px rgba(0, 0, 0, 0.75); }
-.auth-input {
-  padding: 2px 2px 0px 10px;
-  border: solid 1px #121212;
-  background-color: #0D0D0D;
-  -moz-box-shadow: inset 0px 0px 4px 1px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: inset 0px 0px 4px 1px rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0px 0px 4px 1px rgba(0, 0, 0, 0.75);
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  -moz-transition: border 0.15s;
-  -o-transition: border 0.15s;
-  -webkit-transition: border 0.15s;
-  transition: border 0.15s; }
-  .auth-input:focus {
-    border: solid 1px #27ae60;
-    -moz-transition: border 0.15s;
-    -o-transition: border 0.15s;
-    -webkit-transition: border 0.15s;
-    transition: border 0.15s; }
-.auth-submit {
-  margin-bottom: 4px !important; }
-
-/*  ==================
-    Background
-    ================== */
-.background-overlay.overlay--portal::before {
-  position: fixed;
-  display: block;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  -webkit-background-size: cover;
-  background-size: cover;
-  -webkit-filter: blur(1.5px);
-  filter: blur(1.5px);
-  z-index: -1; }
-
-.background-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  -webkit-background-size: cover;
-  background-size: cover; }
-  .background-overlay.overlay--lol {
-    background-position: center 12%;
-    background-attachment: fixed; }
-    .background-overlay.overlay--lol.is-webp {
-      background-image: url("/assets/images/overlay--league-of-legends.webp"); }
-    .background-overlay.overlay--lol.no-webp {
-      background-image: url("/assets/images/overlay--league-of-legends.jpg"); }
-  .background-overlay.overlay--overwatch {
-    background-position: center 12%; }
-    .background-overlay.overlay--overwatch.is-webp {
-      background-image: url("/assets/images/overlay--overwatch.webp"); }
-    .background-overlay.overlay--overwatch.no-webp {
-      background-image: url("/assets/images/overlay--overwatch.jpg"); }
-    .background-overlay.overlay--overwatch::after {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.025); }
-  .background-overlay.overlay--portal::before {
-    background-position: center 20%; }
-  .background-overlay.overlay--portal.is-webp::before {
-    background-image: url("/assets/images/overlay--portal.webp"); }
-  .background-overlay.overlay--portal.no-webp::before {
-    background-image: url("/assets/images/overlay--portal.jpg"); }
-  .background-overlay.overlay--horizon-zero-dawn {
-    background-position: center; }
-    .background-overlay.overlay--horizon-zero-dawn.is-webp {
-      background-image: url("/assets/images/overlay--horizon-zero-dawn.webp"); }
-    .background-overlay.overlay--horizon-zero-dawn.no-webp {
-      background-image: url("/assets/images/overlay--horizon-zero-dawn.jpg"); }
-  .background-overlay.overlay--neutral {
-    background-color: #050608; }
-
-/*  ==================
-    Box
-    ================== */
-.box-wrapper {
-  display: -webkit-inline-flex;
-  display: inline-flex;
-  margin: 12px 5px;
-  padding: 2px;
-  background-color: #090F1C; }
-.box-inner {
-  padding: 8px;
-  border: 1px solid #A17836;
-  text-indent: 0; }
-
+/* Utils Modules */
 /*  ==================
     Button
     ================== */
@@ -940,6 +813,195 @@ p, .paragraph {
   -o-transition: background-color 0.15s ease-in-out;
   -webkit-transition: background-color 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out; }
+
+.material-button {
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 0px;
+  border-radius: 0px; }
+
+/* Modules */
+/*  ==================
+    Authentication
+    ================== */
+.auth-header {
+  display: -webkit-flex;
+  -webkit-justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px; }
+  .auth-header_title {
+    text-align: center; }
+.auth-inner {
+  margin: 25px 12px 10px 12px; }
+.auth-form {
+  width: 500px;
+  -moz-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.14); }
+.auth-group {
+  position: relative;
+  margin-bottom: 22px; }
+.auth-label {
+  position: absolute;
+  top: 12.5px;
+  left: 10px;
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #8A8A8C;
+  -moz-transition: -moz-transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
+  -o-transition: -o-transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
+  -webkit-transition: -webkit-transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
+  transition: transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
+  pointer-events: none; }
+.auth-input {
+  padding: 2px 2px 0px 10px;
+  border-bottom: solid 1px #464648; }
+  .auth-input:focus {
+    border-bottom: solid 1px #27ae60;
+    -moz-transition: border-bottom 0.15s;
+    -o-transition: border-bottom 0.15s;
+    -webkit-transition: border-bottom 0.15s;
+    transition: border-bottom 0.15s; }
+.auth-submit {
+  min-width: 300px;
+  width: 85%; }
+.auth-hr {
+  margin: 0 0 25px 0; }
+.auth-footer {
+  margin-bottom: 25px; }
+  .auth-footer_external-account {
+    width: 100%;
+    margin-bottom: 24px; }
+    .auth-footer_external-account_buttons {
+      min-width: 280px;
+      width: 75%;
+      margin-bottom: 8px; }
+    .auth-footer_external-account_icon {
+      width: 30px;
+      height: 30px;
+      display: inline-block;
+      vertical-align: middle;
+      *vertical-align: auto;
+      *zoom: 1;
+      *display: inline;
+      margin-right: 8px;
+      background-repeat: no-repeat;
+      background-size: 25px;
+      background-position: center;
+      border: none;
+      color: none; }
+      .auth-footer_external-account_icon.account_google {
+        background-image: url("https://pbs.twimg.com/profile_images/927446347879292930/Fi0D7FGJ_400x400.jpg"); }
+      .auth-footer_external-account_icon.account_discord {
+        background-image: url("https://pmcvariety.files.wordpress.com/2018/05/discord-logo.jpg?w=1000&h=563&crop=1"); }
+    .auth-footer_external-account_label {
+      display: inline-block;
+      vertical-align: middle;
+      *vertical-align: auto;
+      *zoom: 1;
+      *display: inline;
+      border: none;
+      background-color: none;
+      font-size: 1.5rem;
+      font-weight: 500;
+      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      color: #fff; }
+  .auth-footer_account {
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #fff; }
+    .auth-footer_account-link {
+      color: #7ABA59;
+      font-weight: 500; }
+
+.account_google {
+  border: 2px solid #fff;
+  background-color: #fff;
+  color: #000; }
+.account_discord {
+  border: 2px solid #738ADB;
+  background-color: #738ADB;
+  color: #fff; }
+
+/*  ==================
+    Background
+    ================== */
+.background-overlay.overlay--portal::before {
+  position: fixed;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  -webkit-filter: blur(1.5px);
+  filter: blur(1.5px);
+  z-index: -1; }
+
+.background-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover; }
+  .background-overlay.overlay--lol {
+    background-position: center 12%;
+    background-attachment: fixed; }
+    .background-overlay.overlay--lol.is-webp {
+      background-image: url("/assets/images/overlay--league-of-legends.webp"); }
+    .background-overlay.overlay--lol.no-webp {
+      background-image: url("/assets/images/overlay--league-of-legends.jpg"); }
+  .background-overlay.overlay--overwatch {
+    background-position: center 12%; }
+    .background-overlay.overlay--overwatch.is-webp {
+      background-image: url("/assets/images/overlay--overwatch.webp"); }
+    .background-overlay.overlay--overwatch.no-webp {
+      background-image: url("/assets/images/overlay--overwatch.jpg"); }
+    .background-overlay.overlay--overwatch::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.025); }
+  .background-overlay.overlay--portal::before {
+    background-position: center 20%; }
+  .background-overlay.overlay--portal.is-webp::before {
+    background-image: url("/assets/images/overlay--portal.webp"); }
+  .background-overlay.overlay--portal.no-webp::before {
+    background-image: url("/assets/images/overlay--portal.jpg"); }
+  .background-overlay.overlay--horizon-zero-dawn {
+    background-position: center; }
+    .background-overlay.overlay--horizon-zero-dawn.is-webp {
+      background-image: url("/assets/images/overlay--horizon-zero-dawn.webp"); }
+    .background-overlay.overlay--horizon-zero-dawn.no-webp {
+      background-image: url("/assets/images/overlay--horizon-zero-dawn.jpg"); }
+  .background-overlay.overlay--neutral {
+    background-color: #050608; }
+
+/*  ==================
+    Box
+    ================== */
+.box-wrapper {
+  display: -webkit-inline-flex;
+  display: inline-flex;
+  margin: 12px 5px;
+  padding: 2px;
+  background-color: #090F1C; }
+.box-inner {
+  padding: 8px;
+  border: 1px solid #A17836;
+  text-indent: 0; }
 
 /*  ==================
     Cookie
@@ -1612,7 +1674,7 @@ p, .paragraph {
   margin: 0 auto;
   padding: 25px 2.5%;
   z-index: 2; }
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1025px) {
     .container {
       padding: 0; } }
 
@@ -1921,9 +1983,15 @@ span.rating-icons {
 
 /* Media */
 /*  ==================
+    Media Authentication
+    ================== */
+@media screen and (max-width: 600px) {
+  .auth-form {
+    width: 100%; } }
+/*  ==================
     Media Footer
     ================== */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 801px) {
   .l-footer {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr; } }
@@ -1935,12 +2003,6 @@ span.rating-icons {
   .l-footer_item-group {
     -ms-grid-columns: 0.75fr 1fr;
     grid-template-columns: 0.75fr 1fr; } }
-/*  ==================
-    Media Form
-    ================== */
-@media screen and (max-width: 480px) {
-  fieldset {
-    padding: 45px 5px; } }
 /*  ==================
     Media Hero
     ================== */
@@ -1958,13 +2020,13 @@ span.rating-icons {
   .hero_footer-resume_image {
     width: 320px;
     min-height: unset; } }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 340px) {
   .hero_footer-resume_image {
     width: 240px; } }
 /*  ==================
     Media Sidebar
     ================== */
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 600px) {
   .sidebar--right {
     right: -100%;
     width: 100%; }
@@ -1976,7 +2038,7 @@ span.rating-icons {
 /*  ==================
     Media Slider
     ================== */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1025px) {
   .slider_items {
     margin-left: 100px; } }
 @media screen and (max-width: 650px) {
