--- a/public/styles/scss/base/_form.scss
+++ b/public/styles/scss/base/_form.scss
@@ -3,26 +3,7 @@
     ================== */
 
 form {
-	padding: 25px;
-
-	background-color: $gray_col;
-}
-
-.form-inner {
-	position: relative;
-	margin: 25px 0 10px 8px;
-
-	&::before {
-		position: absolute;
-		top: 0;
-		left: -10px;
-		content: '';
-		display: block;
-		width: 2px;
-		height: 100%;
-
-		background-color: #fff;
-	}
+	background-color: $blue_gray_col;
 }
 
 input {
