--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -18,13 +18,13 @@
 		<i class="fa fa-2x scroll-to-top_icon"></i>
 	</div>
 	<!-- Scripts -->
-	<script type="application/javascript" src="<%= mainJS %>"></script>
-	<script type="application/javascript" src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
 	<script type="application/javascript">
 		// JS File can access window.CONF Object
-		window.CONF = {env: "<%= env %>"}
+		window.CONF = {env: "<%= env %>", webp: "loading"}
 		// JS Control
 		document.documentElement.classList.remove("no-js");
 	</script>
+	<script type="application/javascript" src="<%= mainJS %>"></script>
+	<script type="application/javascript" src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
 </body>
 </html>
