--- a/public/styles/main-css.css
+++ b/public/styles/main-css.css
@@ -823,13 +823,17 @@ p, .paragraph {
 /*  ==================
     Authentication
     ================== */
+.auth-wrapper {
+  margin-top: 20px; }
 .auth-header {
-  display: -webkit-flex;
-  -webkit-justify-content: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
   padding: 20px; }
+  .auth-header_banner {
+    position: absolute;
+    top: -20px;
+    width: 100%;
+    height: 20px;
+    background-color: #27ae60; }
   .auth-header_title {
     text-align: center; }
 .auth-inner {
@@ -916,6 +920,8 @@ p, .paragraph {
     .auth-footer_account-link {
       color: #7ABA59;
       font-weight: 500; }
+      .auth-footer_account-link:hover {
+        text-decoration: underline; }
 
 .account_google {
   border: 2px solid #fff;
@@ -1979,7 +1985,8 @@ span.rating-icons {
   animation: tooltipSpawn 0.1s ease-in;
   z-index: 80; }
   .tooltip_inner {
-    margin: auto; }
+    margin: auto;
+    text-align: center; }
 
 /* Media */
 /*  ==================
