--- a/public/styles/scss/medias/_media-topbar.scss
+++ b/public/styles/scss/medias/_media-topbar.scss
@@ -1,8 +1,8 @@
 /*  ==================
     Media Top Bar
-    ================== */
+	================== */
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 646px) {
 	.topbar {
 		&--underlined.is-in-sticky {
 			display: block;
@@ -18,6 +18,42 @@
 
 				@include transform(translateX(50%) translateY(-50%));
 			}
+		}
+	}
+}
+
+@media screen and (min-width: $landscape_smartphone_size) {
+	#topbar_options-menu {
+		display: none;
+		&_header {
+			display: block;
+		}
+	}
+}
+
+@media screen and (max-width: $landscape_smartphone_size) {
+	.topbar {
+		&_header {
+			@include flexbox((
+				flex-direction: column !important
+			));
+			align-items: center;
+
+			&-icon {
+				margin-right: 0;
+				margin-bottom: 15px;
+			}
+		}
+
+		&_options {
+			margin-left: 0;
+		}
+	}
+
+	#topbar_options-menu {
+		display: block;
+		&_header {
+			display: none;
 		}
 	}
 }
