[Split] Authentication Container, [Add] Front-end verify

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/regular.css" integrity="sha384-4e3mPOi7K1/4SAx8aMeZqaZ1Pm4l73ZnRRquHFWzPh2Pa4PMAgZm8/WNh6ydcygU" crossorigin="anonymous" />
 </head>
 <body class="has-no-scroll">
-	<div class="loader" data-state="onload">
+	<div id="pageLoader" class="loader all-page-size" data-state="onload">
 		<div class="loader_content">
 			<span class="loader_bubble"></span>
 			<span class="loader_bubble"></span>
