--- a/public/styles/scss/tools/_settings.scss
+++ b/public/styles/scss/tools/_settings.scss
@@ -17,6 +17,9 @@ $green_col_hover: #26a75d;
 $green_col_focus: #219552;
 $blue_col: #2980b9;
 $red_col: #c0392b;
+// STATE
+$positive_col: #26a75d;
+$negative_col: #B22222;
 
 // Variables of time
 $vsm_tr: 0.15s;
