--- a/public/styles/main-css.css
+++ b/public/styles/main-css.css
@@ -201,10 +201,7 @@ svg.icon {
 /*  ==================
     Form
     ================== */
-form {
-  background-color: #202123; }
-
-input {
+input, button[type="submit"] {
   display: block;
   width: 100%;
   height: 50px;
@@ -223,12 +220,7 @@ input {
   -webkit-transition: border-bottom 0.3s;
   transition: border-bottom 0.3s; }
 
-input[type="email"]:invalid {
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-  box-shadow: none; }
-
-input[type="submit"] {
+input[type="submit"], button[type="submit"] {
   border: none;
   background-color: #27ae60;
   color: #fff;
@@ -237,19 +229,27 @@ input[type="submit"] {
   -webkit-transition: background-color 0.3s;
   transition: background-color 0.3s;
   cursor: pointer; }
-  input[type="submit"]:hover {
+  input[type="submit"]:hover, button[type="submit"]:hover {
     background-color: #26a75d;
     -moz-transition: background-color 0.3s;
     -o-transition: background-color 0.3s;
     -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s; }
-  input[type="submit"]:focus {
+  input[type="submit"]:focus, button[type="submit"]:focus {
     background-color: #219552;
     -moz-transition: background-color 0.3s;
     -o-transition: background-color 0.3s;
     -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s;
     outline: none; }
+
+form {
+  background-color: #202123; }
+
+input[type="email"]:invalid {
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
 
 label {
   display: block;
@@ -958,6 +958,7 @@ p, .paragraph {
   border-radius: 30px;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
+  letter-spacing: -.085rem;
   -moz-transition: background-color 0.15s ease-in-out;
   -o-transition: background-color 0.15s ease-in-out;
   -webkit-transition: background-color 0.15s ease-in-out;
@@ -1008,6 +1009,8 @@ p, .paragraph {
   -webkit-transition: -webkit-transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
   transition: transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
   pointer-events: none; }
+  .auth-label_active {
+    color: #26a75d; }
 .auth-input {
   padding: 2px 2px 0px 10px;
   border-bottom: solid 1px #464648; }
@@ -1017,6 +1020,14 @@ p, .paragraph {
     -o-transition: border-bottom 0.15s;
     -webkit-transition: border-bottom 0.15s;
     transition: border-bottom 0.15s; }
+  .auth-input_box {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%); }
 .auth-submit {
   min-width: 300px;
   width: 85%; }
@@ -1510,11 +1521,11 @@ p, .paragraph {
   bottom: 0;
   left: 0;
   display: -webkit-flex;
+  -webkit-flex-direction: column;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
   z-index: 110; }
   .loader[data-state="onload"] {
     display: -webkit-flex;
@@ -1526,10 +1537,10 @@ p, .paragraph {
   .loader_content {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 30px 30px 30px;
-    grid-template-columns: 30px 30px 30px;
-    -ms-grid-rows: 35px 35px 35px;
-    grid-template-rows: 35px 35px 35px; }
+    -ms-grid-columns: repeat(3, 30px);
+    grid-template-columns: repeat(3, 30px);
+    -ms-grid-rows: repeat(3, 35px);
+    grid-template-rows: repeat(3, 35px); }
   .loader_bubble {
     display: block;
     width: 20px;
