--- a/public/styles/scss/modules/utils/_button.scss
+++ b/public/styles/scss/modules/utils/_button.scss
@@ -64,6 +64,7 @@
 		family: "Montserrat", $text_font;
 	}
 	text-align: center;
+	letter-spacing: -.085rem;
 
 	@include transition(background-color $vsm_tr ease-in-out);
 }
