[Add] Database System, SignUp System, LogIn System [Edit] Structuring App.jsx & main.jsx [Add package] axios passport-local react-ga mongoose bcrypt [Remove package] bcryptjs [Add new route] Dashboard '/dashboard' & LogOut '/logout' [Add] Protected Route [Reform] Route Express [Add] API System router '/api/'

--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -14,6 +14,5 @@
 		</section>
 	</noscript>
 	<!-- Noscript tag delimiter (end) -->
-	<main class="root" id="root" data-state="onload">
-	</main>
+	<div class="root" id="root" data-state="onload"></div>
 <%- include('./footer') %>
