--- a/public/styles/main-css.css
+++ b/public/styles/main-css.css
@@ -1010,7 +1010,13 @@ p, .paragraph {
   transition: transform 0.3s, font-size 0.3s, color 0.3s, font-weight 0.3s;
   pointer-events: none; }
   .auth-label_active {
-    color: #26a75d; }
+    font-weight: 600;
+    font-size: 1.6rem;
+    color: #26a75d;
+    -moz-transform: translateY(-24px);
+    -ms-transform: translateY(-24px);
+    -webkit-transform: translateY(-24px);
+    transform: translateY(-24px); }
 .auth-input {
   padding: 2px 2px 0px 10px;
   border-bottom: solid 1px #464648; }
@@ -1020,6 +1026,11 @@ p, .paragraph {
     -o-transition: border-bottom 0.15s;
     -webkit-transition: border-bottom 0.15s;
     transition: border-bottom 0.15s; }
+  .auth-input:-webkit-autofill {
+    -webkit-text-fill-color: #fff !important;
+    -moz-box-shadow: 0 0 0px 1000px #202123 inset !important;
+    -webkit-box-shadow: 0 0 0px 1000px #202123 inset !important;
+    box-shadow: 0 0 0px 1000px #202123 inset !important; }
   .auth-input_box {
     position: absolute;
     top: 50%;
@@ -1605,7 +1616,7 @@ p, .paragraph {
     width: 100%;
     height: 20%;
     margin-top: 6%;
-    background-color: #2980b9; }
+    background-color: #27ae60; }
 
 /*  ==================
     NProgress.js
