--- a/public/styles/scss/modules/_authentication.scss
+++ b/public/styles/scss/modules/_authentication.scss
@@ -52,7 +52,11 @@
         pointer-events: none;
 
         &_active {
+            font-weight: 600;
+            font-size: 1.6rem;
             color: $positive_col;
+
+            @include transform(translateY(-24px));
         }
     }
 
@@ -65,6 +69,11 @@
             border-bottom: solid 1px $green_col;
 
             @include transition(border-bottom $vsm_tr);
+        }
+
+        &:-webkit-autofill {
+            -webkit-text-fill-color: #fff !important;
+            @include box-shadow(0 0 0px 1000px #202123 inset !important);
         }
 
         &_box {
