[Change] Regroup views

--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -1,4 +1,46 @@
-<%- include('./header') %>
+<!DOCTYPE html>
+<html 
+	<% if(typeof lang !== 'undefined') { %>
+		lang="<%= lang %>"
+	<% } else { %>
+		lang="en"
+	<% } %>
+	prefix="og: http://ogp.me/ns#"
+	class="no-js"
+>
+<head>
+	<title><%= title %></title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="author" content="Soldat8889|pSearch" />
+	<meta name="publisher" content="Soldat8889|pSearch" />
+	<meta name="reply-to" content="psearchfr@gmail.com" />
+	<meta name="copyright" content="Copyright © 2018 pSearch" />
+	<meta name="Identifier-URL" content="https://psearch.alwaysdata.net" />
+	<meta name="description" content="<%= description %>" />
+	<meta name="category" content="Searching Players, Playing, Chatting" />
+	<meta name="language" content="fr, en" />
+	<meta name="keywords" content="players, search, play, chat" />
+	<meta name="theme-color" content="#30AE60" />
+	<meta name="og:title" content="<%= title %>" />
+	<meta name="og:description" content="<%= description %>" />
+	<meta name="og:locale" content="fr_FR" />
+	<meta name="og:site_name" content="pSearch" />
+	<meta name="og:url" content="<%= url %>" />
+	<meta name="og:type" content="website" />
+	<link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png" />
+	<link rel="stylesheet" type="text/css" href="<%= mainCSS %>" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/solid.css" integrity="sha384-VGP9aw4WtGH/uPAOseYxZ+Vz/vaTb1ehm1bwx92Fm8dTrE+3boLfF1SpAtB1z7HW" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/regular.css" integrity="sha384-4e3mPOi7K1/4SAx8aMeZqaZ1Pm4l73ZnRRquHFWzPh2Pa4PMAgZm8/WNh6ydcygU" crossorigin="anonymous" />
+</head>
+<body class="has-no-scroll">
+	<div id="pageLoader" class="loader all-page-size" data-state="onload">
+		<div class="loader_content">
+			<span class="loader_bubble"></span>
+			<span class="loader_bubble"></span>
+			<span class="loader_bubble"></span>
+		</div>
+	</div>
 	<!-- Noscript tag delimiter (start) -->
 	<noscript>
 		<section class="page-content">
@@ -15,4 +57,33 @@
 	</noscript>
 	<!-- Noscript tag delimiter (end) -->
 	<div class="root" id="root" data-state="onload"></div>
-<%- include('./footer') %>
+	<% if(locals.flash && locals.flash.error) { %>
+		<div class="flash theme--negative">
+			<div class="content-wrapper">
+				<span class="flash_message"><%= locals.flash.error %></span>
+				<button id="flash_delete" class="flash_button">x</button>
+			</div>
+		</div>
+	<% }
+	if(locals.flash && locals.flash.success) { %>
+		<div class="flash theme--positive">
+			<div class="content-wrapper">
+				<span class="flash_message"><%= locals.flash.success %></span>
+				<button id="flash_delete" class="flash_button">x</button>
+			</div>
+		</div>
+	<% } %>
+	<div id="scrollToTop" class="scroll-to-top">
+		<i class="fa fa-2x scroll-to-top_icon"></i>
+	</div>
+	<!-- Scripts -->
+	<script type="application/javascript">
+		// JS File can access window.CONF Object
+		window.CONF = {env: "<%= env %>", params: <%- JSON.stringify(params) %> }
+		// JS Control
+		document.documentElement.classList.remove("no-js");
+	</script>
+	<script type="application/javascript" src="<%= mainJS %>"></script>
+	<script type="application/javascript" src="<%= appJS %>"></script>
+</body>
+</html>
