--- a/public/styles/scss/main-css.scss
+++ b/public/styles/scss/main-css.scss
@@ -50,6 +50,7 @@
 @import "modules/_fa";
 @import "modules/_feedback";
 @import "modules/_flash";
+@import "modules/_grid";
 @import "modules/_loader";
 @import "modules/_noscript";
 @import "modules/_nprogress";
